--- a/app/src/main/res/layout/item_highscore.xml
+++ b/app/src/main/res/layout/item_highscore.xml
@@ -1,22 +1,44 @@
-<?xml version="1.0" encoding="utf-8"?>
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    android:orientation="horizontal"
+    android:padding="8dp"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
-    android:orientation="vertical"
-    android:padding="12dp">
+    android:layoutDirection="ltr">
 
     <TextView
         android:id="@+id/item_name"
-        android:layout_width="wrap_content"
+        android:layout_width="80dp"
         android:layout_height="wrap_content"
         android:text="Name"
         android:textStyle="bold"
-        android:textSize="18sp" />
+        android:textDirection="ltr"
+        android:gravity="start"/>
 
     <TextView
         android:id="@+id/item_score"
-        android:layout_width="wrap_content"
+        android:layout_width="60dp"
         android:layout_height="wrap_content"
-        android:text="Score and Distance"
-        android:textSize="16sp" />
+        android:text="Score"
+        android:textStyle="bold"
+        android:textDirection="ltr"
+        android:gravity="start"/>
+
+    <TextView
+        android:id="@+id/item_distance"
+        android:layout_width="60dp"
+        android:layout_height="wrap_content"
+        android:text="Distance"
+        android:textStyle="bold"
+        android:textDirection="ltr"
+        android:gravity="start"/>
+
+    <TextView
+        android:id="@+id/item_location"
+        android:layout_width="0dp"
+        android:layout_height="wrap_content"
+        android:layout_weight="1"
+        android:text="Location"
+        android:textStyle="bold"
+        android:textDirection="ltr"
+        android:gravity="start"/>
 </LinearLayout>
