--- a/app/src/main/res/layout/activity_game_over.xml
+++ b/app/src/main/res/layout/activity_game_over.xml
@@ -13,6 +13,19 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"/>
 
+    <TextView
+        android:id="@+id/game_over_message"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text="Message placeholder"
+        android:textSize="18sp"
+        android:textStyle="bold"
+        android:textColor="@color/black"
+        android:layout_gravity="center"
+        android:layout_marginTop="16dp"
+        android:layout_marginBottom="16dp"/>
+
+
     <EditText
         android:id="@+id/input_name"
         android:hint="Enter your name"
@@ -25,4 +38,6 @@
         android:layout_marginTop="24dp"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"/>
+
+
 </LinearLayout>
